Fix svg alignment

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
 }
 
 svg {
+  display: block;
   vertical-align: middle;
 }
 
